<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Receiptify</string>
    <string name="promo_text"> Save time, order from your phone!\nScan the code to download the CHEQ App</string>
    <string name="scan_top_pay">SCAN TOP PAY</string>
    <string name="suggested_gratuity">Suggested Gratuity</string>
    <string name="merchant_copy">MERCHANT COPY</string>
    <string name="powered_by">POWERED BY</string>
    <string name="custom_tip">CUSTOM TIP</string>
    <string name="refunded">REFUNDED</string>
    <string name="signature">SIGNATURE</string>
    <string name="reprinted">**REPRINTED**</string>
    <string name="total_transaction_statement">Total Transaction Statement</string>
    <string name="total_tips">Total Tips</string>
    <string name="server_copy">SERVER COPY</string>
    <string name="cantaloupe">CANTALOUPE</string>

</resources>