<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="78mm"
    android:layout_height="match_parent"
    android:padding="3mm"
    android:id="@+id/layout_qr_payment"
    android:background="@android:color/white"
    android:theme="@style/ReceiptifyThemePOS"
    tools:ignore="InOrMmUsage">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_brand_name"
        tools:text="CHEQ HQ Testing"
        android:layout_gravity="center"
        android:textSize="6.5mm"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_order_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Order :: 9"
        android:layout_gravity="center"
        android:textSize="6mm"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Table Number :: 36C"
        android:layout_gravity="center"
        android:textSize="5.5mm"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/container_placed_at_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pair_placed_at_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="3.5mm"
            tools:text="Placed at:" />

        <!-- This View acts as a Spacer -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" /> <!-- Distribute remaining space -->

        <TextView
            android:id="@+id/tv_pair_placed_at_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="3.5mm"
            tools:text="01/11/2023 1:00 AM PST" />
    </LinearLayout>

    <!-- Divider -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1mm"
        android:src="@drawable/divider_dotted_line"
        android:layout_marginTop="1mm"
        android:layout_marginBottom="1mm"
        />

    <!-- Whitespace for linefeed -->
    <View
        android:layout_width="match_parent"
        android:layout_height="4mm"/>

    <!-- Whitespace for linefeed -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_payment_qr"
        android:layout_width="match_parent"
        android:layout_height="80mm"
        android:adjustViewBounds="true"
        tools:src="@drawable/qr_cheq_app_apple_qr" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4mm"/>

    <!-- Divider -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1mm"
        android:src="@drawable/divider_dotted_line"
        android:layout_marginTop="1mm"
        android:layout_marginBottom="1mm"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="5mm"
        android:layout_marginTop="2mm"
        android:textFontWeight="900"
        android:text="@string/scan_top_pay"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:id="@+id/tvPoweredBy"
            android:textSize="4mm"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cantaloupe"
            android:textSize="4mm"
            android:id="@+id/tvCompanyName"
            android:layout_marginLeft="1mm"
            android:textStyle="bold"
            />

    </LinearLayout>

    <!-- Whitespace for linefeed -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8mm"/>

</LinearLayout>